--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container plans-title-container">
         <div style="
 background-color: #FFDD7F;
-width: 393px;
+width: 30%;
 height: 9px;
 ">
         </div>
@@ -77,7 +77,7 @@ height: 9px;
 
         <div style="
 background-color: #FFDD7F;
-width: 393px;
+width: 30%;
 height: 9px;
 ">
         </div>
@@ -96,32 +96,36 @@ line-height: 29px;
 color: #4C5C71;">
             Group meditation sessions.
         </p>
-        <div class="row d-flex justify-content-between align-items-center">
-            <div class="col-xs-12 col-md-3 plan-card-1">
-                <p class="plan-card-title">Basic</p>
-                <p class="plan-card-price">Rs 899/month</p>
-                <p class="plan-card-description">
-                    Join 1 group meditation session of your choice
-                </p>
-            </div>
 
-            <div class="col-xs-12 col-md-3 plan-card-2">
-                <p class="plan-card-title">Pro</p>
-                <p class="plan-card-price">Rs 4200/6 months</p>
-                <p class="plan-card-description">
-                    Join 2 group meditation sessions of your choice
-                </p>
-            </div>
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-xs-12 col-md-3 plan-card-1">
+                    <p class="plan-card-title">Basic</p>
+                    <p class="plan-card-price">Rs 899/month</p>
+                    <p class="plan-card-description">
+                        Join 1 group meditation session of your choice
+                    </p>
+                </div>
 
-            <div class="col-xs-12 col-md-3 plan-card-3">
-                <p class="plan-card-title">Super pro</p>
-                <p class="plan-card-price">Rs 7200/year</p>
-                <p class="plan-card-description">
-                    Join 3 group meditation sessions of your choice
-                </p>
-            </div>
+                <div class="col-xs-12 col-md-3 plan-card-2">
+                    <p class="plan-card-title">Pro</p>
+                    <p class="plan-card-price">Rs 4200/6 months</p>
+                    <p class="plan-card-description">
+                        Join 2 group meditation sessions of your choice
+                    </p>
+                </div>
 
+                <div class="col-xs-12 col-md-3 plan-card-3">
+                    <p class="plan-card-title">Super pro</p>
+                    <p class="plan-card-price">Rs 7200/year</p>
+                    <p class="plan-card-description">
+                        Join 3 group meditation sessions of your choice
+                    </p>
+                </div>
+
+            </div>
         </div>
+
     </div>
 
 
@@ -133,36 +137,39 @@ line-height: 29px;
 color: #4C5C71;">
             Personal meditation sessions.
         </p>
-        <div class="row d-flex justify-content-between align-items-center">
-            <div class="col-xs-12 col-md-3 plan-card-1">
-                <p class="plan-card-title">Basic</p>
-                <p class="plan-card-price">Rs 1799/month</p>
-                <p class="plan-card-description">
-                    Subscriber to a personal meditation coach.
-                </p>
-            </div>
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-xs-12 col-md-3 plan-card-1">
+                    <p class="plan-card-title">Basic</p>
+                    <p class="plan-card-price">Rs 1799/month</p>
+                    <p class="plan-card-description">
+                        Subscriber to a personal meditation coach.
+                    </p>
+                </div>
 
-            <div class="col-xs-12 col-md-3 plan-card-2">
-                <p class="plan-card-title">Pro</p>
-                <p class="plan-card-price">Rs 9499/6 months</p>
-                <p class="plan-card-description">
-                    Subscriber to a personal meditation coach.
-                    Switch to a different coach.
-                    Maximum 2 switches are allowed
-                </p>
-            </div>
+                <div class="col-xs-12 col-md-3 plan-card-2">
+                    <p class="plan-card-title">Pro</p>
+                    <p class="plan-card-price">Rs 9499/6 months</p>
+                    <p class="plan-card-description">
+                        Subscriber to a personal meditation coach.
+                        Switch to a different coach.
+                        Maximum 2 switches are allowed
+                    </p>
+                </div>
 
-            <div class="col-xs-12 col-md-3 plan-card-3">
-                <p class="plan-card-title">Super pro</p>
-                <p class="plan-card-price">Rs 16799/year</p>
-                <p class="plan-card-description">
-                    Subscriber to a personal meditation coach.
-                    Switch to a different coach.
-                    Maximum 4 switches are allowed
-                </p>
-            </div>
+                <div class="col-xs-12 col-md-3 plan-card-3">
+                    <p class="plan-card-title">Super pro</p>
+                    <p class="plan-card-price">Rs 16799/year</p>
+                    <p class="plan-card-description">
+                        Subscriber to a personal meditation coach.
+                        Switch to a different coach.
+                        Maximum 4 switches are allowed
+                    </p>
+                </div>
 
+            </div>
         </div>
+
     </div>
 
 
